parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program function
Rule 2     program -> program declaration
Rule 3     program -> function
Rule 4     program -> declaration
Rule 5     declaration -> INT ID SEMI
Rule 6     declaration -> INT ID ASSIGN expression SEMI
Rule 7     declaration -> INT ID LBRACKET NUMBER RBRACKET SEMI
Rule 8     function -> VOID ID LPAREN RPAREN block
Rule 9     block -> LBRACE statements RBRACE
Rule 10    statements -> statements statement
Rule 11    statements -> statement
Rule 12    statement -> declaration
Rule 13    statement -> assignment
Rule 14    statement -> if_stmt
Rule 15    statement -> while_stmt
Rule 16    statement -> call_stmt
Rule 17    statement -> return_stmt
Rule 18    assignment -> var_access ASSIGN expression SEMI
Rule 19    var_access -> ID
Rule 20    var_access -> ID LBRACKET expression RBRACKET
Rule 21    if_stmt -> IF LPAREN expression RPAREN block
Rule 22    if_stmt -> IF LPAREN expression RPAREN block ELSE block
Rule 23    if_stmt -> IF LPAREN expression RPAREN block ELSE if_stmt
Rule 24    while_stmt -> WHILE LPAREN expression RPAREN block
Rule 25    call_stmt -> ID LPAREN args RPAREN SEMI
Rule 26    expression -> ID LPAREN args RPAREN
Rule 27    args -> args COMMA expression
Rule 28    args -> expression
Rule 29    args -> empty
Rule 30    return_stmt -> RETURN SEMI
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression MINUS expression
Rule 33    expression -> expression AND_BIT expression
Rule 34    expression -> expression OR_BIT expression
Rule 35    expression -> expression XOR_BIT expression
Rule 36    expression -> expression LSHIFT expression
Rule 37    expression -> expression RSHIFT expression
Rule 38    expression -> expression EQ expression
Rule 39    expression -> expression NEQ expression
Rule 40    expression -> expression LT expression
Rule 41    expression -> expression GT expression
Rule 42    expression -> expression AND_LOG expression
Rule 43    expression -> NOT expression
Rule 44    expression -> LPAREN expression RPAREN
Rule 45    expression -> NUMBER
Rule 46    expression -> STRING
Rule 47    expression -> var_access
Rule 48    empty -> <empty>

Terminals, with rules where they appear

AND_BIT              : 33
AND_LOG              : 42
ASSIGN               : 6 18
COMMA                : 27
ELSE                 : 22 23
EQ                   : 38
GT                   : 41
ID                   : 5 6 7 8 19 20 25 26
IF                   : 21 22 23
INT                  : 5 6 7
LBRACE               : 9
LBRACKET             : 7 20
LPAREN               : 8 21 22 23 24 25 26 44
LSHIFT               : 36
LT                   : 40
MINUS                : 32
NEQ                  : 39
NOT                  : 43
NUMBER               : 7 45
OR_BIT               : 34
PLUS                 : 31
RBRACE               : 9
RBRACKET             : 7 20
RETURN               : 30
RPAREN               : 8 21 22 23 24 25 26 44
RSHIFT               : 37
SEMI                 : 5 6 7 18 25 30
STRING               : 46
VOID                 : 8
WHILE                : 24
XOR_BIT              : 35
error                : 

Nonterminals, with rules where they appear

args                 : 25 26 27
assignment           : 13
block                : 8 21 22 22 23 24
call_stmt            : 16
declaration          : 2 4 12
empty                : 29
expression           : 6 18 20 21 22 23 24 27 28 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44
function             : 1 3
if_stmt              : 14 23
program              : 1 2 0
return_stmt          : 17
statement            : 10 11
statements           : 9 10
var_access           : 18 47
while_stmt           : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program function
    (2) program -> . program declaration
    (3) program -> . function
    (4) program -> . declaration
    (8) function -> . VOID ID LPAREN RPAREN block
    (5) declaration -> . INT ID SEMI
    (6) declaration -> . INT ID ASSIGN expression SEMI
    (7) declaration -> . INT ID LBRACKET NUMBER RBRACKET SEMI

    VOID            shift and go to state 4
    INT             shift and go to state 5

    program                        shift and go to state 1
    function                       shift and go to state 2
    declaration                    shift and go to state 3

state 1

    (0) S' -> program .
    (1) program -> program . function
    (2) program -> program . declaration
    (8) function -> . VOID ID LPAREN RPAREN block
    (5) declaration -> . INT ID SEMI
    (6) declaration -> . INT ID ASSIGN expression SEMI
    (7) declaration -> . INT ID LBRACKET NUMBER RBRACKET SEMI

    VOID            shift and go to state 4
    INT             shift and go to state 5

    function                       shift and go to state 6
    declaration                    shift and go to state 7

state 2

    (3) program -> function .

    VOID            reduce using rule 3 (program -> function .)
    INT             reduce using rule 3 (program -> function .)
    $end            reduce using rule 3 (program -> function .)


state 3

    (4) program -> declaration .

    VOID            reduce using rule 4 (program -> declaration .)
    INT             reduce using rule 4 (program -> declaration .)
    $end            reduce using rule 4 (program -> declaration .)


state 4

    (8) function -> VOID . ID LPAREN RPAREN block

    ID              shift and go to state 8


state 5

    (5) declaration -> INT . ID SEMI
    (6) declaration -> INT . ID ASSIGN expression SEMI
    (7) declaration -> INT . ID LBRACKET NUMBER RBRACKET SEMI

    ID              shift and go to state 9


state 6

    (1) program -> program function .

    VOID            reduce using rule 1 (program -> program function .)
    INT             reduce using rule 1 (program -> program function .)
    $end            reduce using rule 1 (program -> program function .)


state 7

    (2) program -> program declaration .

    VOID            reduce using rule 2 (program -> program declaration .)
    INT             reduce using rule 2 (program -> program declaration .)
    $end            reduce using rule 2 (program -> program declaration .)


state 8

    (8) function -> VOID ID . LPAREN RPAREN block

    LPAREN          shift and go to state 10


state 9

    (5) declaration -> INT ID . SEMI
    (6) declaration -> INT ID . ASSIGN expression SEMI
    (7) declaration -> INT ID . LBRACKET NUMBER RBRACKET SEMI

    SEMI            shift and go to state 11
    ASSIGN          shift and go to state 12
    LBRACKET        shift and go to state 13


state 10

    (8) function -> VOID ID LPAREN . RPAREN block

    RPAREN          shift and go to state 14


state 11

    (5) declaration -> INT ID SEMI .

    VOID            reduce using rule 5 (declaration -> INT ID SEMI .)
    INT             reduce using rule 5 (declaration -> INT ID SEMI .)
    $end            reduce using rule 5 (declaration -> INT ID SEMI .)
    RBRACE          reduce using rule 5 (declaration -> INT ID SEMI .)
    IF              reduce using rule 5 (declaration -> INT ID SEMI .)
    WHILE           reduce using rule 5 (declaration -> INT ID SEMI .)
    ID              reduce using rule 5 (declaration -> INT ID SEMI .)
    RETURN          reduce using rule 5 (declaration -> INT ID SEMI .)


state 12

    (6) declaration -> INT ID ASSIGN . expression SEMI
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 16
    var_access                     shift and go to state 21

state 13

    (7) declaration -> INT ID LBRACKET . NUMBER RBRACKET SEMI

    NUMBER          shift and go to state 22


state 14

    (8) function -> VOID ID LPAREN RPAREN . block
    (9) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 24

    block                          shift and go to state 23

state 15

    (26) expression -> ID . LPAREN args RPAREN
    (19) var_access -> ID .
    (20) var_access -> ID . LBRACKET expression RBRACKET

    LPAREN          shift and go to state 25
    SEMI            reduce using rule 19 (var_access -> ID .)
    PLUS            reduce using rule 19 (var_access -> ID .)
    MINUS           reduce using rule 19 (var_access -> ID .)
    AND_BIT         reduce using rule 19 (var_access -> ID .)
    OR_BIT          reduce using rule 19 (var_access -> ID .)
    XOR_BIT         reduce using rule 19 (var_access -> ID .)
    LSHIFT          reduce using rule 19 (var_access -> ID .)
    RSHIFT          reduce using rule 19 (var_access -> ID .)
    EQ              reduce using rule 19 (var_access -> ID .)
    NEQ             reduce using rule 19 (var_access -> ID .)
    LT              reduce using rule 19 (var_access -> ID .)
    GT              reduce using rule 19 (var_access -> ID .)
    AND_LOG         reduce using rule 19 (var_access -> ID .)
    RPAREN          reduce using rule 19 (var_access -> ID .)
    COMMA           reduce using rule 19 (var_access -> ID .)
    RBRACKET        reduce using rule 19 (var_access -> ID .)
    LBRACKET        shift and go to state 26


state 16

    (6) declaration -> INT ID ASSIGN expression . SEMI
    (31) expression -> expression . PLUS expression
    (32) expression -> expression . MINUS expression
    (33) expression -> expression . AND_BIT expression
    (34) expression -> expression . OR_BIT expression
    (35) expression -> expression . XOR_BIT expression
    (36) expression -> expression . LSHIFT expression
    (37) expression -> expression . RSHIFT expression
    (38) expression -> expression . EQ expression
    (39) expression -> expression . NEQ expression
    (40) expression -> expression . LT expression
    (41) expression -> expression . GT expression
    (42) expression -> expression . AND_LOG expression

    SEMI            shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    AND_BIT         shift and go to state 30
    OR_BIT          shift and go to state 31
    XOR_BIT         shift and go to state 32
    LSHIFT          shift and go to state 33
    RSHIFT          shift and go to state 34
    EQ              shift and go to state 35
    NEQ             shift and go to state 36
    LT              shift and go to state 37
    GT              shift and go to state 38
    AND_LOG         shift and go to state 39


state 17

    (44) expression -> LPAREN . expression RPAREN
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 40
    var_access                     shift and go to state 21

state 18

    (43) expression -> NOT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 41
    var_access                     shift and go to state 21

state 19

    (45) expression -> NUMBER .

    SEMI            reduce using rule 45 (expression -> NUMBER .)
    PLUS            reduce using rule 45 (expression -> NUMBER .)
    MINUS           reduce using rule 45 (expression -> NUMBER .)
    AND_BIT         reduce using rule 45 (expression -> NUMBER .)
    OR_BIT          reduce using rule 45 (expression -> NUMBER .)
    XOR_BIT         reduce using rule 45 (expression -> NUMBER .)
    LSHIFT          reduce using rule 45 (expression -> NUMBER .)
    RSHIFT          reduce using rule 45 (expression -> NUMBER .)
    EQ              reduce using rule 45 (expression -> NUMBER .)
    NEQ             reduce using rule 45 (expression -> NUMBER .)
    LT              reduce using rule 45 (expression -> NUMBER .)
    GT              reduce using rule 45 (expression -> NUMBER .)
    AND_LOG         reduce using rule 45 (expression -> NUMBER .)
    RPAREN          reduce using rule 45 (expression -> NUMBER .)
    COMMA           reduce using rule 45 (expression -> NUMBER .)
    RBRACKET        reduce using rule 45 (expression -> NUMBER .)


state 20

    (46) expression -> STRING .

    SEMI            reduce using rule 46 (expression -> STRING .)
    PLUS            reduce using rule 46 (expression -> STRING .)
    MINUS           reduce using rule 46 (expression -> STRING .)
    AND_BIT         reduce using rule 46 (expression -> STRING .)
    OR_BIT          reduce using rule 46 (expression -> STRING .)
    XOR_BIT         reduce using rule 46 (expression -> STRING .)
    LSHIFT          reduce using rule 46 (expression -> STRING .)
    RSHIFT          reduce using rule 46 (expression -> STRING .)
    EQ              reduce using rule 46 (expression -> STRING .)
    NEQ             reduce using rule 46 (expression -> STRING .)
    LT              reduce using rule 46 (expression -> STRING .)
    GT              reduce using rule 46 (expression -> STRING .)
    AND_LOG         reduce using rule 46 (expression -> STRING .)
    RPAREN          reduce using rule 46 (expression -> STRING .)
    COMMA           reduce using rule 46 (expression -> STRING .)
    RBRACKET        reduce using rule 46 (expression -> STRING .)


state 21

    (47) expression -> var_access .

    SEMI            reduce using rule 47 (expression -> var_access .)
    PLUS            reduce using rule 47 (expression -> var_access .)
    MINUS           reduce using rule 47 (expression -> var_access .)
    AND_BIT         reduce using rule 47 (expression -> var_access .)
    OR_BIT          reduce using rule 47 (expression -> var_access .)
    XOR_BIT         reduce using rule 47 (expression -> var_access .)
    LSHIFT          reduce using rule 47 (expression -> var_access .)
    RSHIFT          reduce using rule 47 (expression -> var_access .)
    EQ              reduce using rule 47 (expression -> var_access .)
    NEQ             reduce using rule 47 (expression -> var_access .)
    LT              reduce using rule 47 (expression -> var_access .)
    GT              reduce using rule 47 (expression -> var_access .)
    AND_LOG         reduce using rule 47 (expression -> var_access .)
    RPAREN          reduce using rule 47 (expression -> var_access .)
    COMMA           reduce using rule 47 (expression -> var_access .)
    RBRACKET        reduce using rule 47 (expression -> var_access .)


state 22

    (7) declaration -> INT ID LBRACKET NUMBER . RBRACKET SEMI

    RBRACKET        shift and go to state 42


state 23

    (8) function -> VOID ID LPAREN RPAREN block .

    VOID            reduce using rule 8 (function -> VOID ID LPAREN RPAREN block .)
    INT             reduce using rule 8 (function -> VOID ID LPAREN RPAREN block .)
    $end            reduce using rule 8 (function -> VOID ID LPAREN RPAREN block .)


state 24

    (9) block -> LBRACE . statements RBRACE
    (10) statements -> . statements statement
    (11) statements -> . statement
    (12) statement -> . declaration
    (13) statement -> . assignment
    (14) statement -> . if_stmt
    (15) statement -> . while_stmt
    (16) statement -> . call_stmt
    (17) statement -> . return_stmt
    (5) declaration -> . INT ID SEMI
    (6) declaration -> . INT ID ASSIGN expression SEMI
    (7) declaration -> . INT ID LBRACKET NUMBER RBRACKET SEMI
    (18) assignment -> . var_access ASSIGN expression SEMI
    (21) if_stmt -> . IF LPAREN expression RPAREN block
    (22) if_stmt -> . IF LPAREN expression RPAREN block ELSE block
    (23) if_stmt -> . IF LPAREN expression RPAREN block ELSE if_stmt
    (24) while_stmt -> . WHILE LPAREN expression RPAREN block
    (25) call_stmt -> . ID LPAREN args RPAREN SEMI
    (30) return_stmt -> . RETURN SEMI
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    INT             shift and go to state 5
    IF              shift and go to state 53
    WHILE           shift and go to state 54
    ID              shift and go to state 51
    RETURN          shift and go to state 55

    statements                     shift and go to state 43
    statement                      shift and go to state 44
    declaration                    shift and go to state 45
    assignment                     shift and go to state 46
    if_stmt                        shift and go to state 47
    while_stmt                     shift and go to state 48
    call_stmt                      shift and go to state 49
    return_stmt                    shift and go to state 50
    var_access                     shift and go to state 52

state 25

    (26) expression -> ID LPAREN . args RPAREN
    (27) args -> . args COMMA expression
    (28) args -> . expression
    (29) args -> . empty
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (48) empty -> .
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    RPAREN          reduce using rule 48 (empty -> .)
    COMMA           reduce using rule 48 (empty -> .)

    args                           shift and go to state 56
    expression                     shift and go to state 57
    empty                          shift and go to state 58
    var_access                     shift and go to state 21

state 26

    (20) var_access -> ID LBRACKET . expression RBRACKET
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 59
    var_access                     shift and go to state 21

state 27

    (6) declaration -> INT ID ASSIGN expression SEMI .

    VOID            reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)
    INT             reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)
    $end            reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)
    RBRACE          reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)
    IF              reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)
    WHILE           reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)
    ID              reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)
    RETURN          reduce using rule 6 (declaration -> INT ID ASSIGN expression SEMI .)


state 28

    (31) expression -> expression PLUS . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 60
    var_access                     shift and go to state 21

state 29

    (32) expression -> expression MINUS . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 61
    var_access                     shift and go to state 21

state 30

    (33) expression -> expression AND_BIT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 62
    var_access                     shift and go to state 21

state 31

    (34) expression -> expression OR_BIT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 63
    var_access                     shift and go to state 21

state 32

    (35) expression -> expression XOR_BIT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 64
    var_access                     shift and go to state 21

state 33

    (36) expression -> expression LSHIFT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 65
    var_access                     shift and go to state 21

state 34

    (37) expression -> expression RSHIFT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 66
    var_access                     shift and go to state 21

state 35

    (38) expression -> expression EQ . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 67
    var_access                     shift and go to state 21

state 36

    (39) expression -> expression NEQ . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 68
    var_access                     shift and go to state 21

state 37

    (40) expression -> expression LT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20

    expression                     shift and go to state 69
    var_access                     shift and go to state 21

state 38

    (41) expression -> expression GT . expression
    (26) expression -> . ID LPAREN args RPAREN
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression AND_BIT expression
    (34) expression -> . expression OR_BIT expression
    (35) expression -> . expression XOR_BIT expression
    (36) expression -> . expression LSHIFT expression
    (37) expression -> . expression RSHIFT expression
    (38) expression -> . expression EQ expression
    (39) expression -> . expression NEQ expression
    (40) expression -> . expression LT expression
    (41) expression -> . expression GT expression
    (42) expression -> . expression AND_LOG expression
    (43) expression -> . NOT expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (46) expression -> . STRING
    (47) expression -> . var_access
    (19) var_access -> . ID
    (20) var_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 15
    NOT             shift and go to state 18
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
